--- a/src/MinimarketPro/login.form
+++ b/src/MinimarketPro/login.form
@@ -5,7 +5,9 @@
     <constraints>
       <xy x="20" y="20" width="500" height="400"/>
     </constraints>
-    <properties/>
+    <properties>
+      <visible value="true"/>
+    </properties>
     <border type="none"/>
     <children>
       <component id="5a6e2" class="javax.swing.JButton" binding="loginButton">
@@ -16,7 +18,7 @@
           <text value="Administrador"/>
         </properties>
       </component>
-      <component id="4170e" class="javax.swing.JTextField" binding="pass">
+      <component id="d04e4" class="javax.swing.JPasswordField" binding="pass">
         <constraints>
           <grid row="3" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
