--- a/src/MinimarketPro/menu.form
+++ b/src/MinimarketPro/menu.form
@@ -150,6 +150,70 @@
               </component>
             </children>
           </grid>
+          <grid id="bbab" layout-manager="GridLayoutManager" row-count="2" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+            <margin top="0" left="0" bottom="0" right="0"/>
+            <constraints>
+              <tabbedpane title="Visualizar Ventas"/>
+            </constraints>
+            <properties>
+              <background color="-1773569"/>
+            </properties>
+            <border type="none"/>
+            <children>
+              <scrollpane id="508e4">
+                <constraints>
+                  <grid row="1" column="0" row-span="1" col-span="4" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <background color="-2306"/>
+                </properties>
+                <border type="none"/>
+                <children>
+                  <component id="3fcb3" class="javax.swing.JTable" binding="table1" default-binding="true">
+                    <constraints/>
+                    <properties>
+                      <background color="-1773569"/>
+                      <rowHeight value="50"/>
+                    </properties>
+                  </component>
+                </children>
+              </scrollpane>
+              <component id="fabcc" class="javax.swing.JLabel">
+                <constraints>
+                  <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <foreground color="-16777216"/>
+                  <text value="ID CAJERO"/>
+                </properties>
+              </component>
+              <component id="41e4f" class="javax.swing.JTextField" binding="idCajerov">
+                <constraints>
+                  <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false">
+                    <preferred-size width="150" height="-1"/>
+                  </grid>
+                </constraints>
+                <properties>
+                  <margin top="2" left="9" bottom="2" right="6"/>
+                </properties>
+              </component>
+              <component id="35069" class="javax.swing.JButton" binding="buscarVentas">
+                <constraints>
+                  <grid row="0" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <background color="-16542464"/>
+                  <foreground color="-2828"/>
+                  <text value="Buscar"/>
+                </properties>
+              </component>
+              <hspacer id="eb99b">
+                <constraints>
+                  <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                </constraints>
+              </hspacer>
+            </children>
+          </grid>
           <grid id="10e48" default-binding="true" layout-manager="GridLayoutManager" row-count="8" column-count="5" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
             <margin top="0" left="0" bottom="0" right="0"/>
             <constraints>
