--- a/src/MinimarketPro/menu_cajero.form
+++ b/src/MinimarketPro/menu_cajero.form
@@ -1,20 +1,24 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="MinimarketPro.menu_cajero">
-  <grid id="27dc6" binding="panel1" default-binding="true" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" binding="panel1" default-binding="true" layout-manager="GridLayoutManager" row-count="2" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
       <xy x="20" y="20" width="500" height="400"/>
     </constraints>
-    <properties/>
+    <properties>
+      <background color="-16777216"/>
+    </properties>
     <border type="none"/>
     <children>
       <tabbedpane id="35737" binding="tabbedPane1" default-binding="true">
         <constraints>
-          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false">
+          <grid row="1" column="0" row-span="1" col-span="3" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false">
             <preferred-size width="200" height="200"/>
           </grid>
         </constraints>
-        <properties/>
+        <properties>
+          <background color="-6972506"/>
+        </properties>
         <border type="none"/>
         <children>
           <grid id="2683e" default-binding="true" layout-manager="GridLayoutManager" row-count="6" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
@@ -22,7 +26,9 @@
             <constraints>
               <tabbedpane title="Ventas"/>
             </constraints>
-            <properties/>
+            <properties>
+              <background color="-1773569"/>
+            </properties>
             <border type="none"/>
             <children>
               <component id="bd8af" class="javax.swing.JLabel">
@@ -46,6 +52,7 @@
                   <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
+                  <foreground color="-16777216"/>
                   <text value="ID Prod"/>
                 </properties>
               </component>
@@ -54,6 +61,8 @@
                   <grid row="1" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
+                  <background color="-16542464"/>
+                  <foreground color="-2306"/>
                   <text value="Buscar"/>
                 </properties>
               </component>
@@ -63,7 +72,9 @@
                     <preferred-size width="200" height="200"/>
                   </grid>
                 </constraints>
-                <properties/>
+                <properties>
+                  <background color="-6972506"/>
+                </properties>
                 <border type="none"/>
                 <children>
                   <grid id="ff97d" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
@@ -100,21 +111,51 @@
                       </scrollpane>
                     </children>
                   </grid>
+                  <grid id="1869a" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+                    <margin top="0" left="0" bottom="0" right="0"/>
+                    <constraints>
+                      <tabbedpane title="Carrito"/>
+                    </constraints>
+                    <properties>
+                      <background color="-1773569"/>
+                    </properties>
+                    <border type="none"/>
+                    <children>
+                      <scrollpane id="63372">
+                        <constraints>
+                          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+                        </constraints>
+                        <properties/>
+                        <border type="none"/>
+                        <children>
+                          <component id="10678" class="javax.swing.JTable" binding="table1" default-binding="true">
+                            <constraints/>
+                            <properties>
+                              <rowHeight value="50"/>
+                            </properties>
+                          </component>
+                        </children>
+                      </scrollpane>
+                      <component id="45027" class="javax.swing.JButton" binding="cargarCarritoButton">
+                        <constraints>
+                          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                        </constraints>
+                        <properties>
+                          <icon value="refresh.png"/>
+                          <iconTextGap value="0"/>
+                          <text value=""/>
+                        </properties>
+                      </component>
+                    </children>
+                  </grid>
                 </children>
               </tabbedpane>
-              <component id="7f2f3" class="javax.swing.JButton" binding="button1" default-binding="true">
-                <constraints>
-                  <grid row="5" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-                </constraints>
-                <properties>
-                  <text value="Button"/>
-                </properties>
-              </component>
               <component id="6a87" class="javax.swing.JLabel">
                 <constraints>
                   <grid row="2" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
+                  <foreground color="-16777216"/>
                   <text value="-Busque un producto que desee comprar-"/>
                 </properties>
               </component>
@@ -125,45 +166,56 @@
               </hspacer>
               <component id="2e41e" class="javax.swing.JButton" binding="comprar">
                 <constraints>
+                  <grid row="5" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <background color="-16542464"/>
+                  <foreground color="-2306"/>
+                  <text value="Finalizar Compra"/>
+                </properties>
+              </component>
+              <component id="7f2f3" class="javax.swing.JButton" binding="agregarAlCarritoButton" default-binding="true">
+                <constraints>
                   <grid row="4" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
-                  <text value="Comprar"/>
+                  <background color="-16542464"/>
+                  <foreground color="-2306"/>
+                  <text value="Agregar al Carrito"/>
                 </properties>
               </component>
-            </children>
-          </grid>
-          <grid id="62188" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-            <margin top="0" left="0" bottom="0" right="0"/>
-            <constraints>
-              <tabbedpane title="Nota de Venta"/>
-            </constraints>
-            <properties/>
-            <border type="none"/>
-            <children>
-              <component id="d5171" class="javax.swing.JLabel">
-                <constraints>
-                  <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-                </constraints>
-                <properties>
-                  <text value="Label"/>
-                </properties>
-              </component>
-              <vspacer id="a5b14">
-                <constraints>
-                  <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
-                </constraints>
-              </vspacer>
             </children>
           </grid>
         </children>
       </tabbedpane>
       <component id="c66ec" class="javax.swing.JLabel">
         <constraints>
-          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="11" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <font size="16" style="1"/>
+          <foreground color="-2306"/>
           <text value="SISTEMA DE CAJEROS"/>
+        </properties>
+      </component>
+      <component id="35297" class="javax.swing.JLabel">
+        <constraints>
+          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <icon value="iconologin.png"/>
+          <text value=""/>
+        </properties>
+      </component>
+      <component id="a0f00" class="javax.swing.JButton" binding="logOutButton" default-binding="true">
+        <constraints>
+          <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <borderPainted value="true"/>
+          <contentAreaFilled value="false"/>
+          <foreground color="-2306"/>
+          <text value="Log Out"/>
         </properties>
       </component>
     </children>
